# AI-Agents

./: Career_Agent  LLM_Evaluator
Debate_Team_SDK/: Agents.py  judge_agent.py  main.py  oppose_agent.py
charity_response_system/: README.md  pyproject.toml
charity_response_system/output/: action_plan.md  assessment_report.md  decision_report.md  events.md  selected_charities.md
charity_response_system/src/charity_response_system/: crew.py  main.py
charity_response_system/src/charity_response_system/config/: agents.yaml  tasks.yaml
charity_response_system/src/charity_response_system/tools/: push_tool.py
debate/output/: decide.md  oppose.md  propose.md
debate/src/debate/: main.py
deep_research/: README.md  clarification_agent.py  deep_research.py  email_agent.py  requirements.txt  research_manager.py
financial_researcher/output/: report.md
financial_researcher/src/financial_researcher/: main.py
