[project]
name = "charity_response_system"
version = "0.1.0"
description = "Charity_Response_System using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
charity_response_system = "charity_response_system.main:run"
run_crew = "charity_response_system.main:run"
train = "charity_response_system.main:train"
replay = "charity_response_system.main:replay"
test = "charity_response_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
